--- a/PDFReader/App.xaml
+++ b/PDFReader/App.xaml
@@ -1,9 +1,5 @@
 ﻿<Application x:Class="PDFReader.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:PDFReader"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
-</Application>
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:PDFReader" StartupUri="MainWindow.xaml"
+    ShutdownMode="OnMainWindowClose" />
