--- a/PDFReader/MainWindow.xaml
+++ b/PDFReader/MainWindow.xaml
@@ -1,23 +1,111 @@
 ﻿<Window x:Class="PDFReader.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PDFReader"
-        xmlns:vm="clr-namespace:PDFReader;assembly=PDFReaderModel"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="538" Width="801" Background="SlateGray">
-    <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-        <ItemsControl ItemsSource="{Binding Pages}" x:Name="PagesControl">
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <Canvas Width="{Binding Width}" Height="{Binding Height}" Background="White" Margin="20">
-                        <Canvas.Effect>
-                            <DropShadowEffect BlurRadius="5" ShadowDepth="3"/>
-                        </Canvas.Effect>
-                    </Canvas>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
-    </ScrollViewer>
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
+    xmlns:local="clr-namespace:PDFReader" mc:Ignorable="d" Title="MainWindow"
+    Width="600" Height="400">
+  <Window.DataContext>
+    <local:MainWindowViewModel />
+  </Window.DataContext>
+  <DockPanel>
+    <!-- side menu -->
+    <Grid Background="Black" Name="menu_grid">
+      <!-- for Drawer Animation -->
+      <Grid.Width>
+        <Binding ElementName="dummy_icon" Path="ActualWidth" Mode="OneTime" />
+      </Grid.Width>
+      <Grid.Triggers>
+        <EventTrigger RoutedEvent="MouseEnter">
+          <BeginStoryboard>
+            <Storyboard>
+              <DoubleAnimation Storyboard.TargetName="menu_grid"
+                  Storyboard.TargetProperty="Width"
+                  To="{Binding Mode=OneTime, ElementName=dummy_menu_line, Path=ActualWidth}"
+                  Duration="0:0:0.2">
+                <DoubleAnimation.EasingFunction>
+                  <CubicEase />
+                </DoubleAnimation.EasingFunction>
+              </DoubleAnimation>
+            </Storyboard>
+          </BeginStoryboard>
+        </EventTrigger>
+        <EventTrigger RoutedEvent="MouseLeave">
+          <BeginStoryboard>
+            <Storyboard>
+              <DoubleAnimation Storyboard.TargetName="menu_grid"
+                  Storyboard.TargetProperty="Width"
+                  To="{Binding Mode=OneTime, ElementName=dummy_icon, Path=ActualWidth}"
+                  Duration="0:0:0.15">
+                <DoubleAnimation.EasingFunction>
+                  <CubicEase />
+                </DoubleAnimation.EasingFunction>
+              </DoubleAnimation>
+            </Storyboard>
+          </BeginStoryboard>
+        </EventTrigger>
+      </Grid.Triggers>
+
+      <!-- Style Settings -->
+      <Grid.Resources>
+        <!-- unvisible but selectable RadioButton -->
+        <Style TargetType="RadioButton">
+          <Setter Property="Template">
+            <Setter.Value>
+              <ControlTemplate TargetType="RadioButton">
+                <Border Cursor="Hand" Background="{TemplateBinding Background}" />
+              </ControlTemplate>
+            </Setter.Value>
+          </Setter>
+          <Setter Property="Background" Value="Transparent" />
+          <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+              <Setter Property="Background" Value="Gray" />
+            </Trigger>
+            <Trigger Property="IsChecked" Value="True">
+              <Setter Property="Background" Value="#FFACACAC" />
+            </Trigger>
+          </Style.Triggers>
+        </Style>
+        <Style TargetType="svgc:SvgViewbox">
+          <Setter Property="Width" Value="32" />
+          <Setter Property="Height" Value="32" />
+          <Setter Property="Margin" Value="6" />
+          <Setter Property="IsHitTestVisible" Value="False" />
+        </Style>
+        <Style TargetType="TextBlock">
+          <Setter Property="FontSize" Value="15" />
+          <Setter Property="FontFamily" Value="ＭＳ ゴシック" />
+          <Setter Property="Foreground" Value="White" />
+          <Setter Property="VerticalAlignment" Value="Center" />
+          <Setter Property="Margin" Value="10" />
+          <Setter Property="IsHitTestVisible" Value="False" />
+        </Style>
+      </Grid.Resources>
+
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="Auto" />
+        <ColumnDefinition Width="Auto" />
+      </Grid.ColumnDefinitions>
+      <Grid.RowDefinitions>
+        <RowDefinition Height="Auto" />
+      </Grid.RowDefinitions>
+
+      <!-- Dummy element to calculate icon width -->
+      <Grid Name="dummy_icon" Grid.Column="0" Visibility="Hidden" />
+      <!-- Dummy element to calculate the width of the whole menu. -->
+      <Grid Name="dummy_menu_line" Grid.ColumnSpan="2" Visibility="Hidden" />
+
+      <RadioButton Command="{Binding TransitionToExportToImagePage}"
+          IsChecked="{Binding ExportToImageButtonIsChecked}" Grid.Row="0"
+          Grid.ColumnSpan="2" />
+      <svgc:SvgViewbox Source="/Resources/export_to_image.svg" Grid.Row="0"
+          Grid.Column="0" />
+      <TextBlock Grid.Row="0" Grid.Column="1">画像に変換</TextBlock>
+    </Grid>
+
+    <!-- main panel -->
+    <Frame Source="{Binding PageSource}" />
+  </DockPanel>
 </Window>
