--- a/ExportToImage/MainPage.xaml
+++ b/ExportToImage/MainPage.xaml
@@ -156,7 +156,16 @@
               </ComboBox>
             </DockPanel>
           </StackPanel>
-          <Button Command="{Binding Export}" Margin="5" Grid.Row="1">出力(実装中)</Button>
+
+          <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+              <ColumnDefinition Width="*" />
+              <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <Button Command="{Binding Export}" Margin="5" Grid.Column="0">出力開始</Button>
+            <Button Command="{Binding CancelExport}" Margin="5" Grid.Column="1">中止</Button>
+          </Grid>
         </Grid>
       </Border>
       <!-- end of Setting section -->
